--- a/src/component/PostCard.css
+++ b/src/component/PostCard.css
@@ -60,3 +60,15 @@
   font-size: 12px;
   font-weight: 600;
 }
+.post-card.badge.헤어 {
+  background-color: #f0e68c;
+} /* 연한 카키 */
+.post-card.badge.피부 {
+  background-color: #ffe4e1;
+} /* 연한 핑크 */
+.post-card.badge.패키지 {
+  background-color: #add8e6;
+} /* 연한 블루 */
+.post-card.badge.이벤트 {
+  background-color: #f5deb3;
+} /* 연한 베이지 */
