--- a/src/component/PostCard.css
+++ b/src/component/PostCard.css
@@ -72,3 +72,42 @@
 .post-card.badge.이벤트 {
   background-color: #f5deb3;
 } /* 연한 베이지 */
+.hot-badge {
+  display: inline-block;
+  margin-right: 8px;
+  padding: 2px 8px;
+  background: linear-gradient(45deg, #ff6a00, #ffcc00);
+  color: #fff;
+  font-size: 12px;
+  font-weight: 700;
+  border-radius: 12px;
+  animation: pulse 1.5s infinite;
+}
+
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+    opacity: 1;
+  }
+  50% {
+    transform: scale(1.1);
+    opacity: 0.8;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+.new-badge {
+  display: inline-block;
+  background: linear-gradient(135deg, #56ccf2, #2f80ed); /* 파랑 그라데이션 */
+  color: #fff;
+  font-weight: 700;
+  padding: 2px 8px;
+  border-radius: 12px;
+  font-size: 12px;
+  margin-right: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  /* transform: translateY(-1px); */
+  animation: pulse 1.5s infinite;
+}
